fixing alignment and background of menu tablet / mobile

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -2,6 +2,13 @@
    .content-bg-repeat {
         width: 940px;
     }
+
+    .navbar-inverse {
+        .navbar-inner {
+            background-color: transparent;
+            background-image: none;
+        }
+    }
 }
 
 @media (min-width: 1200px) {
@@ -20,66 +27,25 @@
 /* Phones and tablets */
 @media (max-width: 979px) {
 
-	.wrapper-menu,
-	.wrapper-bottom-menu  {
-		background-color: #111111;
-		background-image: none;
-		position: relative;
-		padding-left: 0;
-		padding-right: 0;
-		.navbar-inner {
-			background-color: transparent;
-			background-image: none;
-			.btn-navbar {
-				position: absolute;
-				z-index: 3;
-				right: 10px;
-				top: 0;
-			}
-			.nav {
-				margin-top: 43px;
-			}
-		}
-		&:after {
-			content: "";
-			position: absolute;
-			z-index: 2;
-			width: 100%;
-			height: 40px;
-			#gradient > .vertical(@color_four,@color_five);
-			top: 0;
-			left: 0;
-		}
-	}
-
-	.nav{
-		li {
-			.dropdown-menu {
-				background-color: @black;
-			}
-		}
-	}
-
 	.navbar-inverse {
-		.nav {
-			li {
-				&.active {
-					> a {
-						&:hover,
-						&:focus {
-							color: @navbarInverseLinkColorHover;
-							[class^="icon-"],
-							[class*=" icon-"] {
-								color: @navbarInverseLinkColorHover;
-							}
-							.caret {
-								border-top-color: @navbarInverseLinkColorHover;
-							}
-						}
-					}
-				}
-			}
-		}
+        .navbar-inner {
+            .nav {
+                background-color: transparent;
+                background-image: none;
+
+                &:after, &:before {
+                    content: none;
+                    display: none;
+                }
+
+                > li {
+                    border: 0;
+                    display: block;
+
+                    > a {border: 0;}
+                }
+            }
+        }
 	}
 }
 
