--- a/code/less/template.less
+++ b/code/less/template.less
@@ -120,8 +120,6 @@
 }
 
 .navbar-inverse .navbar-inner {
-  background-image: none;
-  background-color: transparent;
   border: 0;
   padding: 0;
 
@@ -159,7 +157,7 @@
     > li {
       display: inline-block;
       float: none;
-      line-height: 1.3em;
+      line-height: 1.6em;
       border-right: 1px solid #42110A;
 
       > a {
